# ensemble

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ensemble/: Cargo.toml
ensemble/docs/: getting-started.md  migrations.md  relationships.md
ensemble/examples/: user.rs
ensemble/src/: builder.rs  connection.rs  lib.rs  query.rs  value.rs
ensemble/src/migrations/: migrator.rs  mod.rs  schema.rs
ensemble/src/migrations/schema/: column.rs  command.rs  mod.rs
ensemble/src/relationships/: belongs_to.rs  belongs_to_many.rs  has_many.rs  has_one.rs  mod.rs
ensemble/src/tests/: connection_tests.rs
ensemble/src/types/: datetime.rs  hashed.rs  json.rs  mod.rs  uuid.rs
ensemble/src/value/: de.rs  mod.rs  ser.rs
ensemble_derive/: Cargo.toml
ensemble_derive/src/: field.rs  lib.rs
ensemble_derive/src/column/: field.rs  mod.rs
ensemble_derive/src/default/: mod.rs
ensemble_derive/src/model/: field.rs  mod.rs  serde.rs
ensemble_derive/src/model/default/: mod.rs  uuid.rs
examples/migrations/: Cargo.toml
examples/migrations/src/: main.rs  migrations.rs
examples/relationships/: Cargo.toml
examples/relationships/src/: main.rs
examples/user/: Cargo.toml
examples/user/src/: main.rs
test_suite/: Cargo.toml
test_suite/tests/: derive.rs
test_suite/tests/derive/: default.rs  json.rs  keys.rs  panic.rs  primary_key.rs  table_name.rs
test_suite/tests/derive/panic/: no_primary_key.rs  no_primary_key.stderr
