[workspace]
resolver = "2"
exclude = ["examples/user", "examples/migrations"]
members = ["ensemble", "ensemble_derive", "test_suite"]

[workspace.package]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/m1guelpf/ensemble"
authors = ["Miguel Piedrafita <rust@miguel.build>"]

[patch.crates-io]
ensemble = { path = "ensemble" }
