[workspace]
resolver = "2"
members = ["ensemble", "ensemble_derive", "test_suite"]
exclude = ["examples/user", "examples/migrations", "examples/relationships"]

[workspace.package]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/m1guelpf/ensemble"
authors = ["Miguel Piedrafita <rust@miguel.build>"]

[patch.crates-io]
ensemble = { path = "ensemble" }
