[package]
name = "ensemble"
version = "0.0.2"
readme = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A Laravel-inspired ORM"

[dependencies]
rbs = "4.3.3"
sha256 = "1.4.0"
tokio = "1.32.0"
serde = "1.0.183"
tracing = "0.1.37"
fastdate = "0.1.39"
itertools = "0.11.0"
Inflector = "0.11.4"
thiserror = "1.0.44"
serde_json = "1.0.105"
async-trait = "0.1.73"
schemars = { version = "0.8.13", optional = true }
validator = { version = "0.16.1", optional = true }
ensemble_derive = { version = "0", path = "../ensemble_derive" }
uuid = { version = "1.4.1", features = ["serde", "v4"], optional = true }
rbdc-pg = { version = "4.3.12", default-features = false, optional = true }
rbdc-mysql = { version = "4.3.12", default-features = false, optional = true }
rbatis = { version = "4.3.12", default-features = false, features = [
    "default_mode",
] }

[dev-dependencies]
axum = "0.6.20"

[features]
default = ["native-tls", "json", "schema", "uuid"]

schema = ["dep:schemars"]
mysql = ["dep:rbdc-mysql"]
postgres = ["dep:rbdc-pg"]
json = ["ensemble_derive/json"]
uuid = ["dep:uuid", "schemars?/uuid1"]
rustls = ["rbatis/tls-rustls", "rbdc-pg?/tls-rustls", "rbdc-mysql?/tls-rustls"]
native-tls = [
    "rbatis/tls-native-tls",
    "rbdc-pg?/tls-native-tls",
    "rbdc-mysql?/tls-native-tls",
]
