[package]
name = "ensemble"
version = "0.0.5"
readme = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A Laravel-inspired ORM"

[dependencies]
rbs = "4.5.2"
sha256 = "1.4.0"
tokio = "1.32.0"
serde = "1.0.183"
tracing = "0.1.37"
fastdate = "0.3.25"
itertools = "0.12.0"
Inflector = "0.11.4"
thiserror = "1.0.44"
serde_json = "1.0.105"
async-trait = "0.1.73"
schemars = { version = "0.8.13", optional = true }
validator = { version = "0.16.1", optional = true }
ensemble_derive = { version = "0.0.4", path = "../ensemble_derive" }
uuid = { version = "1.4.1", features = ["serde", "v4"], optional = true }
quaint = { path = "/Users/m1guelpf/Code/Temp/quaint", features = ["pooled"] }
chrono = { version = "0.4.32", default-features = false }

[dev-dependencies]
axum = "0.7.2"

[features]
default = ["rustls", "json", "schema", "uuid"]

mysql = ["quaint/mysql"]
schema = ["dep:schemars"]
postgres = ["quaint/postgresql"]
json = ["ensemble_derive/json"]
uuid = ["dep:uuid", "schemars?/uuid1", "quaint/uuid"]
rustls = []
native-tls = []


[package.metadata.docs.rs]
features = ["mysql", "postgres"]
