[package]
version = "0.0.2"
name = "ensemble_derive"
readme = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Derive macros for the ensemble crate"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.28"
quote = "1.0.32"
deluxe = "0.5.0"
Inflector = "0.11.4"
pluralizer = "0.4.0"
proc-macro2 = "1.0.66"

[features]
json = []
