[package]
publish = false
version = "0.0.0"
edition.workspace = true
name = "ensemble_test_suite"
authors = ["Miguel Piedrafita <rust@miguel.build>"]

[dependencies]
ensemble = { path = "../ensemble" }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
automod = "1.0.1"
trybuild = { version = "1.0.83", features = ["diff"] }
