[package]
publish = false
version = "0.0.0"
edition.workspace = true
name = "ensemble_test_suite"
authors = ["Miguel Piedrafita <rust@miguel.build>"]

[dependencies]
serde_json = "1.0.105"
ensemble = { path = "../ensemble" }
serde = { version = "1.0.183", features = ["derive"] }

[dev-dependencies]
automod = "1.0.1"
trybuild = { version = "1.0.83", features = ["diff"] }
